--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,19 @@
 node('MAVEN_JDK8') {
     stage('version control') {
         git url: 'https://github.com/rukhsdevopsgit/game-of-life.git',
-            branch: 'scripted',
-            poll: false
+            branch: 'scripted'
+            
+    }
+    stage('build the code') {
+        sh 'export PATH="/usr/lib/jvm/java-1.8.0-openjdk-amd64/bin:$PATH" && mvn package'
+    }
+    stage('archive the artifacts') {
+        archiveArtifacts onlyIfSuccessful: true,
+            artifacts: '**/target/gameoflife.war',
+            allowEmptyArchive: false
+    }
+    stage('show the test results') {
+        junit testResults: '**/surefire-reports/TEST-*.xml',
+               allowEmptyResullts:true
     }
 }
